[package]
name = "gtk_test"
version = "0.1.0"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.13.0"
gio = "0.9.0"

[dependencies.gdk-pixbuf]
version = "0.9.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]